--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
   },
   "homepage": "https://github.com/kxrl1/joga_mongo#readme",
   "dependencies": {
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.4",
-    "mongodb": "^7.0.0"
+    "mongodb": "^7.0.0",
+    "morgan": "^1.10.1",
+    "mysql2": "^3.15.3"
   },
   "devDependencies": {
     "@types/node": "^24.10.1"
